# bacnetip-edge-client

./: .gitignore  CMakeLists.txt  README.md  build_run.sh  conanfile.txt  fresh_build.sh
data/: discovery.json  inventory_objects.json
include/: discovery.h  inventory_objects.h  model.h  object_list.h  poll_initial.h  watchlist.h
src/: discovery.c  inventory_objects.c  main.c  object_list.c  poll_initial.c  watchlist.c
tests/: test_discovery.c
